# struf

./: Cargo.toml  LICENSE  README.md
struf/: Cargo.toml
struf/src/: lib.rs
struf_derive/: Cargo.toml
struf_derive/src/: lib.rs
struf_test/: Cargo.toml
struf_test/src/: basic.rs  generics.rs  generics_unused.rs  lib.rs
