[package]
name = "struf_derive"
description = "Derive for Struct Filters"
version = "0.0.1"
edition = "2021"
authors = ["nicolas.moutschen@gmail.com"]
license = "MIT"
repository = "https://github.com/nmoutschen/struf"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
paste = "1.0.14"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.29"
